--- a/الرئيسية.html
+++ b/الرئيسية.html
@@ -390,6 +390,7 @@ input {
                 <li><a href="#order-online">Order online </a></li>
                 <li><a href="book a table.html">Book a table or event </a></li>
                 <li><a href="#contact"> Contact</a></li>
+                <li><a href="الادارة.html">admin</a></li>
             </ul>
         </nav>
         <h1>Surf & Turf</h1>
@@ -430,7 +431,7 @@ input {
 
 
 
-    <a href="الادارة.html"><button>admin</button></a>
+    
 
 
     <script>
