--- a/الادارة.html
+++ b/الادارة.html
@@ -202,7 +202,7 @@
         <!-- إضافة قسم جديد -->
         <div class="admin-section">
             <h2>إضافة قسم جديد</h2>
-            <input type="text" id="newCategoryName" placeholder="اسم القسم">
+            <input type="text" id="newCategoryName" placeholder="اختر اسم القسم الرئيسي ">
             <select id="newCategoryType">
                 <option value="food">Food</option>
                 <option value="drink">Drink</option>
