--- a/الادارة.html
+++ b/الادارة.html
@@ -204,7 +204,7 @@
             <h2>إضافة قسم جديد</h2>
 
             <select id="newCategoryType">
-                <option> value="">اختر القسم الرئيسي</option>
+                <option value="">اختر القسم الرئيسي</option>
                 <option value="food">Food</option>
                 <option value="drink">Drink</option>
                 <option value="dessert">Dessert</option>
